ajout du branding signalorange

--- a/lib/live_dashboard_web/components/layouts/app.html.heex
+++ b/lib/live_dashboard_web/components/layouts/app.html.heex
@@ -1,32 +1,21 @@
-<%!-- <header class="px-4 sm:px-6 lg:px-8">
+ <header class="px-4 sm:px-6 lg:px-8 bg-white border-b border-[#DE9043]">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
+      <a href="https://signalorange.tech">
+      
+        <img src={~p"/images/logo_2024.png"}  width="80" />
       </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
-      </p>
+      <b><a href="https://github.com/signalorange/perceptio">Perceptio</a></b>
+      <span class="inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">2024-stable-2</span>
+                
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
-      </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
-      </a>
-      <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
-      >
-        Get Started <span aria-hidden="true">&rarr;</span>
-      </a>
     </div>
   </div>
-</header> --%>
-<main class="py-20">
-  <div class="mx-auto">
-    <.flash_group flash={@flash} />
+</header> 
+<main >
+<.flash_group flash={@flash} />
+  <div >
     <%= @inner_content %>
   </div>
 </main>
