--- a/lib/live_dashboard_web/components/layouts/root.html.heex
+++ b/lib/live_dashboard_web/components/layouts/root.html.heex
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
     <.live_title >
-      <%= assigns[:page_title] || "Indicateurs" %>
+      Perceptio
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src={~p"/js/chart.js"}></script>
+    <link rel="apple-touch-icon" sizes="180x180" href={~p"/icons/apple-touch-icon.png"}>
+    <link rel="icon" type="image/png" sizes="32x32" href={~p"/icons/favicon-32x32.png"}>
+    <link rel="icon" type="image/png" sizes="16x16" href={~p"/icons/favicon-16x16.png"}>
+    <link rel="manifest" href={~p"/icons/site.webmanifest"}>
   </head>
-  <body class="bg-white" style="background-color: #f0f0f0;">
+  <body class="min-h-screen bg-zinc-100">
     <%= @inner_content %>
   </body>
 </html>
