--- a/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
+++ b/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
@@ -1,7 +1,4 @@
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<div class="container mx-auto w-full">
-
+<div class="container mx-auto w-full pt-20">
   <div class="grid grid-cols-3 gap-4">
     <!-- Chart 1 -->
     <div class="bg-white shadow-md rounded-lg p-3 col-span-1">
@@ -34,14 +31,6 @@
     </div> --%>
   </div>
 </div>
-<div class="container mx-auto py-20 w-full">
-  <div class="grid grid-cols-3 gap-4">
-  <div></div>
-  <div style="text-align: center;"><span>Perceptio - 2024-latest-1</span></div>
-  <div></div>
-</div>
-</div>
-
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
