--- a/lib/live_dashboard_web/components/layouts/root.html.heex
+++ b/lib/live_dashboard_web/components/layouts/root.html.heex
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href={~p"/icons/favicon-16x16.png"}>
     <link rel="manifest" href={~p"/icons/site.webmanifest"}>
   </head>
-  <body class="min-h-screen bg-zinc-100">
+  <body class="min-h-screen min-w-sreen bg-zinc-100">
     <%= @inner_content %>
   </body>
 </html>
