--- a/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
+++ b/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
@@ -1,7 +1,7 @@
 <div class="container mx-auto pt-20">
   <div class="grid grid-cols-3 gap-4">
     <!-- Chart 1 -->
-    <div class="bg-white shadow-md rounded-lg p-3 col-span-1">
+    <div class="bg-white shadow-md rounded-lg p-3 col-span-1 pl-4">
     <h2 class="text-xl font-semibold mb-4">État des <b>lignes</b> de commandes</h2>
       <div class="chart-container">
         <canvas id="pie-chart" width="600" height="600"></canvas>
@@ -16,7 +16,7 @@
       </div>
     </div>
     <!-- Chart 5 -->
-    <div class="bg-white shadow-md rounded-lg p-3 col-span-1">
+    <div class="bg-white shadow-md rounded-lg p-3 col-span-1 pr-4">
       <h2 class="text-xl font-semibold mb-4">Lignes de commandes par <b>Routes</b></h2>
       <div class="chart-container">
         <canvas id="route-chart" width="600" height="600"></canvas>
