--- a/lib/live_dashboard_web/components/layouts/app.html.heex
+++ b/lib/live_dashboard_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
- <header class="px-4 sm:px-6 lg:px-8 bg-white border-b border-[#DE9043]">
+ <header class="px-4 sm:px-6 lg:px-8 bg-white border-b border-[#DE9043] mb-4">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
       <a href="https://signalorange.tech">
@@ -6,7 +6,7 @@
         <img src={~p"/images/logo_2024.png"}  width="80" />
       </a>
       <b><a href="https://github.com/signalorange/perceptio">Perceptio</a></b>
-      <span class="inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">2024-stable-4</span>
+      <span class="inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">2024-stable-5</span>
                 
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
