--- a/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
+++ b/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
@@ -1,10 +1,10 @@
-<div class="container mx-auto pt-20">
-  <div class="grid grid-cols-3 gap-4">
+<div class="container mx-auto">
+  <div class="grid grid-cols-3 gap-4 mb-4">
     <!-- Chart 1 -->
     <div class="bg-white shadow-md rounded-lg p-3 col-span-1 pl-4">
     <h2 class="text-xl font-semibold mb-4">État des <b>lignes</b> de commandes</h2>
       <div class="chart-container">
-        <canvas id="pie-chart" width="600" height="600"></canvas>
+        <canvas id="pie-chart" width="500" height="400"></canvas>
         <!--<progress value="45" max="100" class="w-full">15%</progress>-->
       </div>    
     </div>
@@ -12,23 +12,41 @@
     <div class="bg-white shadow-md rounded-lg p-3 col-span-1">
       <h2 class="text-xl font-semibold mb-4">Lignes de commandes par <b>Types</b></h2>
       <div class="chart-container">
-        <canvas id="cable-chart" width="600" height="600"></canvas>
+        <canvas id="cable-chart" width="500" height="400"></canvas>
       </div>
     </div>
     <!-- Chart 5 -->
     <div class="bg-white shadow-md rounded-lg p-3 col-span-1 pr-4">
       <h2 class="text-xl font-semibold mb-4">Lignes de commandes par <b>Routes</b></h2>
       <div class="chart-container">
-        <canvas id="route-chart" width="600" height="600"></canvas>
+        <canvas id="route-chart" width="500" height="400"></canvas>
       </div>
     </div>
-    <!-- Chart 4 -->
-    <%!-- <div class="bg-white shadow-md rounded-lg p-3 col-span-1">
-      <h2 class="text-xl font-semibold mb-4">Moyenne de pick à l'heure</h2>
-      <div class="flex flex-col items-center justify-center pt-6">
-        <span class="text-9xl font-bold text-blue-600 mb-4" id="moyenne"><%= @indicators.moyenne %></span>
+  </div>
+  <div class="grid grid-cols-3 gap-4">
+    <!-- Chart 1 -->
+    <div class="bg-white shadow-md rounded-lg p-3 col-span-1">
+      <h2 class="text-xl font-semibold mb-4">Lignes de commandes <b>aujourd'hui</b></h2>
+      <div class="chart-container text-justify mx-auto ml-12">
+        <span id="comm_today" class="
+                                    inline-block 
+                                    text-black-500  
+                                    font-bold 
+                                    py-1  
+                                    rounded-full 
+                                    text-9xl">
+          0
+        </span>
+
       </div>
-    </div> --%>
+    </div>
+    <div class="bg-white shadow-md rounded-lg p-3 col-span-2 pl-4">
+    <h2 class="text-xl font-semibold mb-4">Tendance <b><span style="color:#607d8b">7 jours</span></b> vs <b><span style="color:#8bc34a">aujourd'hui</span></b></h2>
+      <div class="chart-container">
+        <canvas id="trend-chart" width="1000" height="250"></canvas>
+        <!--<progress value="45" max="100" class="w-full">15%</progress>-->
+      </div>    
+    </div>
   </div>
 </div>
 
@@ -69,10 +87,21 @@
             }
           },
           y: {
-          stacked: true,
-          beginAtZero: true,
-          //type: 'logarithmic',
-        }
+            stacked: true,
+            beginAtZero: true,
+            title: {
+              display: true,
+              text: 'Lignes de commandes'
+            }
+            //type: 'logarithmic',
+          },
+          x:{
+            display: true,
+            title: {
+              display: true,
+              text: 'Statut'
+            }
+          }
         },
         plugins: {
           legend: {
@@ -123,10 +152,19 @@
       scales: {
         x: {
           stacked: true,
+          display: true,
+          title: {
+            display: true,
+            text: 'Catégorie de produit'
+          }
         },
         y: {
           stacked: true,
           beginAtZero: true,
+          title: {
+            display: true,
+            text: 'Lignes de commandes'
+          }
           //type: 'logarithmic',
         }
       },
@@ -169,11 +207,74 @@
       scales: {
         x: {
           stacked: true,
+          display: true,
+          title: {
+            display: true,
+            text: 'Catégorie de transport'
+          }
+
         },
         y: {
           stacked: true,
           beginAtZero: true,
+          title: {
+            display: true,
+            text: 'Lignes de commandes'
+          }
           //type: 'logarithmic',
+        }
+      },
+      plugins: {
+        legend: {
+            display: false,
+          }
+      }
+    }
+  });
+    // Line chart for trend
+  const trendCtx = document.getElementById('trend-chart').getContext('2d');
+  const labels = ['5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24', '1', '2', '3', '4']
+  const trends = new Chart(trendCtx, {
+    type: 'line',
+    data: {
+      labels: labels,
+      datasets: [
+         {
+          label: 'Moyenne',
+          data: Array(labels.length).fill(0),
+          borderColor: 'rgba(96, 125, 139, 0.5)',
+          borderDash: [5, 5],
+          fill: false,
+          cubicInterpolationMode: 'monotone',
+          tension: 0.4
+        },
+        {
+          label: "Aujourd'hui",
+          data: Array(labels.length).fill(0),
+          borderColor: 'rgba(139, 195, 74, 1)',
+          fill: false,
+          cubicInterpolationMode: 'monotone',
+          tension: 0.4
+        }
+      ]
+    },
+    options: {
+      responsive: true,
+      scales: {
+        y: {
+          beginAtZero: true,
+          title: {
+            display: true,
+            text: 'Lignes de commandes'
+          }
+          //type: 'logarithmic',
+        },
+        x:{
+          display: true,
+          title: {
+            display: true,
+            text: 'Heure du jour'
+          }
         }
       },
       plugins: {
@@ -195,6 +296,7 @@
             chart.data.datasets[0].data[1] = data[0].completees;
             chart.data.datasets[0].data[2] = data[0].imprimees;
             chart.data.datasets[0].data[3] = data[0].afaire;
+            document.getElementById('comm_today').innerHTML = data[0].total;
         }
         chart.update()
       })
@@ -259,6 +361,39 @@
 
         //routes.data.datasets[0].data[2] = data.value;
         routes.update()
+      })
+
+    fetch('/api/nb_commandes_ln_semaine')
+      .then(response => response.json())  // Parse JSON response
+      .then(data => {
+        const updatedData = Array(labels.length).fill(null);
+
+        // Map the API data to the correct label index
+        data.forEach(item => {
+          const labelIndex = labels.indexOf(item.heure); // Find the index of the hour in the labels
+          if (labelIndex !== -1) {
+            updatedData[labelIndex] = item.total; // Update the corresponding index with the new total
+          }
+        });
+        trends.data.datasets[0].data = updatedData;
+        trends.update()
+      })
+    // chart par routes
+    fetch('/api/nb_commandes_ln_jour')
+      .then(response => response.json())  // Parse JSON response
+      .then(data => {
+        // Update the DOM with the fetched data
+        const updatedData = Array(labels.length).fill(null);
+
+        // Map the API data to the correct label index
+        data.forEach(item => {
+          const labelIndex = labels.indexOf(item.heure); // Find the index of the hour in the labels
+          if (labelIndex !== -1) {
+            updatedData[labelIndex] = item.total; // Update the corresponding index with the new total
+          }
+        });
+        trends.data.datasets[1].data = updatedData;
+        trends.update()
       })
 
   }
