--- a/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
+++ b/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
@@ -27,12 +27,12 @@
     <!-- Chart 1 -->
     <div class="bg-white shadow-md rounded-lg p-3 col-span-1">
       <h2 class="text-xl font-semibold mb-4">Lignes de commandes <b>aujourd'hui</b></h2>
-      <div class="chart-container text-justify mx-auto ml-12">
+      <div class="chart-container text-justify mx-auto ml-16">
         <span id="comm_today" class="
                                     inline-block 
                                     text-black-500  
                                     font-bold 
-                                    py-1  
+                                    py-3  
                                     rounded-full 
                                     text-9xl">
           0
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="bg-white shadow-md rounded-lg p-3 col-span-2 pl-4">
-    <h2 class="text-xl font-semibold mb-4">Tendance <b><span style="color:#607d8b">7 jours</span></b> vs <b><span style="color:#8bc34a">aujourd'hui</span></b></h2>
+    <h2 class="text-xl font-semibold mb-4">Tendance horaire <b><span style="color:#607d8b">7 jours</span></b> vs <b><span style="color:#8bc34a">aujourd'hui</span></b></h2>
       <div class="chart-container">
         <canvas id="trend-chart" width="1000" height="250"></canvas>
         <!--<progress value="45" max="100" class="w-full">15%</progress>-->
