légende en gras

--- a/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
+++ b/lib/live_dashboard_web/live/indicator_live/indicators.html.heex
@@ -91,7 +91,10 @@
             beginAtZero: true,
             title: {
               display: true,
-              text: 'Lignes de commandes'
+              text: 'Lignes de commandes',
+              font: {
+                weight: 'bold',
+              },
             }
             //type: 'logarithmic',
           },
@@ -99,7 +102,10 @@
             display: true,
             title: {
               display: true,
-              text: 'Statut'
+              text: 'Statut',
+              font: {
+                weight: 'bold',
+              },
             }
           }
         },
@@ -155,7 +161,10 @@
           display: true,
           title: {
             display: true,
-            text: 'Catégorie de produit'
+            text: 'Catégorie de produit',
+            font: {
+                weight: 'bold',
+              },
           }
         },
         y: {
@@ -163,7 +172,10 @@
           beginAtZero: true,
           title: {
             display: true,
-            text: 'Lignes de commandes'
+            text: 'Lignes de commandes',
+            font: {
+                weight: 'bold',
+              },
           }
           //type: 'logarithmic',
         }
@@ -210,7 +222,10 @@
           display: true,
           title: {
             display: true,
-            text: 'Catégorie de transport'
+            text: 'Catégorie de transport',
+            font: {
+                weight: 'bold',
+              },
           }
 
         },
@@ -219,7 +234,10 @@
           beginAtZero: true,
           title: {
             display: true,
-            text: 'Lignes de commandes'
+            text: 'Lignes de commandes',
+            font: {
+                weight: 'bold',
+              },
           }
           //type: 'logarithmic',
         }
@@ -265,7 +283,10 @@
           beginAtZero: true,
           title: {
             display: true,
-            text: 'Lignes de commandes'
+            text: 'Lignes de commandes',
+            font: {
+                weight: 'bold',
+              },
           }
           //type: 'logarithmic',
         },
@@ -273,7 +294,10 @@
           display: true,
           title: {
             display: true,
-            text: 'Heure du jour'
+            text: 'Heure du jour',
+            font: {
+                weight: 'bold',
+              },
           }
         }
       },
